<?xml version="1.0"?>
<package format="2">
  <name>differential_drive_arduino</name>
  <version>0.0.0</version>
  <description>
    The differential_drive packageProvides some basic tools for interfacing a differential-drive 
    robot with the ROS navigation stack.  The intent is to make this 
    independent of specific robot implementation.
  </description>

  <maintainer email="kyrlosfekry@gmail.com">Kyrillos Fekry</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/jstepha/differential_drive</url>
  <url type="website">https://code.google.com/p/differential-drive/</url>

  <author email="jfstepha@gmail.com">Jon Stephan</author>
  <author email="markrose@acm.org">Mark Rose</author>
  <author email="kyrlosfekry@gmail.com">Kyrillos Fekry</author>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
